# crud_rust

./: .env.example  .gitignore  Cargo.toml  database.sql
src/: main.rs  router.rs
