[package]
name="crazy_rust_ultra_developer"
version="0.0.1"
edition = "2021"

[dependencies]
hyper = {version="0.14.27", features=["full"]}
tokio = {version="1", features=["full"]}

serde = "1.0.173"
serde_json = "1.0.103"
diesel = {version="2.1.0", features=["sqlite"]}

thiserror = "1.0.43"
log = "0.4.19"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"
hyper-router = "0.5.0"
url = "2.4.0"
